# Commentaries-Database

./: .gitignore  biblians.py  categories.json  constants.py  pyproject.toml
1 Corinthians/: Deuteronomy 10_14.toml  Deuteronomy 17_7.toml  Deuteronomy 25_4.toml  Exodus 32_6.toml  Genesis 2_24.toml  Genesis 2_7.toml  Hosea 13_14.toml  Isaiah 22_13.toml  Isaiah 25_8.toml  Isaiah 28_11-12.toml  Isaiah 29_14.toml  Isaiah 40_13-14.toml  Isaiah 64_4.toml  Jeremiah 9_24.toml  Job 5_13.toml  Psalms 24_1.toml  Psalms 8_6.toml  Psalms 94_11.toml  metadata.toml
1 Peter/: Isaiah 28_16.toml  Isaiah 40_6-8.toml  Isaiah 53_5.toml  Isaiah 53_9.toml  Isaiah 8_12.toml  Isaiah 8_14.toml  Leviticus 11_44-45.toml  Leviticus 19_2.toml  Leviticus 20_7.toml  Proverbs 10_12.toml  Proverbs 11_31.toml  Proverbs 3_34.toml  Psalms 118_22-23.toml  Psalms 34_12-16.toml  Psalms 55_22.toml  metadata.toml
1 Timothy/: Deuteronomy 25_4.toml  metadata.toml
2 Corinthians/: Deuteronomy 19_15.toml  Exodus 16_18.toml  Exodus 29_45.toml  Ezekiel 37_27.toml  Isaiah 49_8.toml  Isaiah 52_11.toml  Jeremiah 31_9.toml  Jeremiah 32_38.toml  Jeremiah 9_24.toml  Leviticus 26_12.toml  Psalms 112_9.toml  Psalms 116_10.toml  Zechariah 8_8.toml  metadata.toml
2 Peter/: Proverbs 26_11.toml  metadata.toml
Abba Poemen/: 1 Thessalonians 5_15.toml  2 Timothy 2_20.toml  Psalms 101_5-6.toml  Psalms 18_29.toml  Titus 1_15.toml  metadata.toml
Abercius/: 2 Maccabees 12_39-45.toml  metadata.toml
Abraham of Nathpar/: 1 Corinthians 14_15.toml  John 4_24.toml  metadata.toml
Acacius of Beroea/: Proverbs 22_28.toml  (+1 more)
(+68973 files in other folders)
