[project]
name = "commentaries-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "rtoml>=0.13.0",
    "tomledit>=1.1.4",
    "typer>=0.26.7",
]
